# NovaBug

./: .gitignore  CMakeLists.txt  CMakeSettings.json
include/engine/: engine.hpp
include/engine/common/: utils.hpp
include/engine/physics/: physics.hpp
include/engine/render/: renderer.hpp  viewport_handler.hpp
src/: main.cpp
